@@ -5,6 +5,7 @@ Changes in PixelLight 0.9.8-R1 (not yet released)
 - Change: Moved the PLProject executable from the runtime directory into the tools directory
 - Change: Merged "Demos" into "Samples" in order to simplify the structure of PixelLight
 - Change: Merged "PLGeneral" into "PLCore" in order to simplify the structure of PixelLight
+- Change: "PLCore::Url": Renamed "GetTitle()" into "GetCompleteTitle()" and added some more filename title/extension related methods
 - Removed: Outdated "PLDefaultFileFormats" (use "PLAssimp" instead)
 
 
